# scraper_boletin_oficial

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  scrape_boletin.py  scrape_boletin_prefect.py  send_weekly_report.py  send_weekly_report_prefect.py
src/: __init__.py  classifier.py  config.py  email_service.py  models.py  scraper.py  storage.py
tests/: __init__.py  conftest.py  test_config.py  test_email_service.py  test_storage.py
